triple Itamar Spelling

--- a/triple.html
+++ b/triple.html
@@ -7,7 +7,7 @@
 <!--
 body {
 	font: 100% Verdana, Arial, Helvetica, sans-serif;
-	background: #000000; 
+	background: #000000;
 	margin: 0; /* it's good practice to zero the margin and padding of the body element to account for differing browser defaults */
 	padding: 0;
 	text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
@@ -21,7 +21,7 @@ body {
 	text-align: left; /* this overrides the text-align: center on the body element. */
 }
 .oneColLiqCtrHdr #header {
-	background: #000000; 
+	background: #000000;
 	padding: 0 10px 0 20px;  /* this padding matches the left alignment of the elements in the divs that appear beneath it. If an image is used in the #header instead of text, you may want to remove the padding. */
 }
 .oneColLiqCtrHdr #header h1 {
@@ -32,10 +32,10 @@ body {
 	padding: 0 20px; /* remember that padding is the space inside the div box and margin is the space outside the div box */
 	background: #000000;
 }
-.oneColLiqCtrHdr #footer { 
+.oneColLiqCtrHdr #footer {
 	padding: 0 10px; /* this padding matches the left alignment of the elements in the divs that appear above it. */
 	background:#000000;
-} 
+}
 .oneColLiqCtrHdr #footer p {
 	margin: 0; /* zeroing the margins of the first element in the footer will avoid the possibility of margin collapse - a space between divs */
 	padding: 10px 0; /* padding on this element will create space, just as the the margin would have, without the margin collapse issue */
@@ -57,39 +57,39 @@ body {
     <p align="justify">Soft amorphous solids are important as practical materials, and they also continue to challenge our fundamental physical understanding. For example, the interactions among individual colloidal particles may be well-characterised, but it is very challenging to predict the properties of the glassy or gel-like materials that form when these particles are dispersed in a solvent.  This challenge is especially apparent if the systems are far-from-equilibrium. This meeting brings together recent advances from expeirment, simulation and theory.</p>
     <h4>Invited Speakers</h4>
     <p align="justify">
-    Abraham Mauleon Amieva (Bristol), 
-    Paul Bartlett (Bristol), 
-    Himangsu Bhaumik (Cambridge), 
-    Jörg Baschnagel (Strasbourg), 
-    Giulio Biroli (ENS), 
-    Ludovic Berthier (Montpellier), 
-    Daniel Bonn (Amsterdam), 
-    Rui Cheng (ESPCI), 
-    Olivier Dauchot (ESPCI), 
+    Abraham Mauleon Amieva (Bristol),
+    Paul Bartlett (Bristol),
+    Himangsu Bhaumik (Cambridge),
+    Jörg Baschnagel (Strasbourg),
+    Giulio Biroli (ENS),
+    Ludovic Berthier (Montpellier),
+    Daniel Bonn (Amsterdam),
+    Rui Cheng (ESPCI),
+    Olivier Dauchot (ESPCI),
     Malcolm Faers (Bayer AG),
-    Suzanne Fielding (Durham), 
-    Thomas Gibaud (ENS Lyon), 
-    Anael Lemaitre (Universite Gustave Eiffel), 
-    Matthieu Leocmach (Lyon), 
+    Suzanne Fielding (Durham),
+    Thomas Gibaud (ENS Lyon),
+    Anael Lemaitre (Universite Gustave Eiffel),
+    Matthieu Leocmach (Lyon),
     Sylvain Patinet  (ESPCI),
-    Itamar Procaccia (Wietzmann). 
-    Camille Scalliet (ENS), 
+    Itamar Procaccia (weizmann Institute). 
+    Camille Scalliet (ENS),
     Thomas Speck (Stuttgart),
-    Gilles Tarjus (Jussieu), 
+    Gilles Tarjus (Jussieu),
     Kris Thijssen (Copenhagen)  and
     Francesco Turci (Bristol).</p>
-    <h4>Organisers</h4> 
+    <h4>Organisers</h4>
     <p>Paddy Royall, Rob Jack and Tannie Liverpool
   <!-- end #mainContent -->
     </p>
     <p>&nbsp; </p>
   </div>
   <div id="footer">
-    <p align="center"><img src="TripleImage/logoHoneydew.jpg" width="89" height="89" alt="royall" /> 
-    <img src="TripleImage/cnrsLogoBlackHoneydew.png" width="95" height="95" alt="cnrs" />  	
-    <img src="TripleImage/epsrcHoneydew.jpg" width="149" height="89" alt="epsrc" /> 
-    <img src="TripleImage/gulliverLogoBlackHoneydew.jpg" width="114" height="84" alt="gulliver" /> 
-    <img src="TripleImage/logopmmh_medium-2-honeydew.png" width="246" height="73" alt="pmmh" /> 
+    <p align="center"><img src="TripleImage/logoHoneydew.jpg" width="89" height="89" alt="royall" />
+    <img src="TripleImage/cnrsLogoBlackHoneydew.png" width="95" height="95" alt="cnrs" />
+    <img src="TripleImage/epsrcHoneydew.jpg" width="149" height="89" alt="epsrc" />
+    <img src="TripleImage/gulliverLogoBlackHoneydew.jpg" width="114" height="84" alt="gulliver" />
+    <img src="TripleImage/logopmmh_medium-2-honeydew.png" width="246" height="73" alt="pmmh" />
     <img src="TripleImage/espciLogoHoneydew.jpg" width="327" height="95" alt="espci" /></p>
   <!-- end #footer --></div>
 <!-- end #container --></div>
