--- a/triple.html
+++ b/triple.html
@@ -72,7 +72,7 @@ body {
     Anael Lemaitre (Universite Gustave Eiffel),
     Matthieu Leocmach (Lyon),
     Sylvain Patinet  (ESPCI),
-    Itamar Procaccia (weizmann Institute), 
+    Itamar Procaccia (Weizmann Institute), 
     Camille Scalliet (ENS),
     Thomas Speck (Stuttgart),
     Gilles Tarjus (Jussieu),
