--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ body {
         <td width="298">
 
        Abraham Mauleon Amieva (Bristol) <br>
+			 Paul Bartlett (Bristol) <br>
        Himangsu Bhaumik (Cambridge) <br>
        Daniel Bonn (Amsterdam) <br>
        Jörg Baschnagel (Strasbourg) <br>
@@ -82,11 +83,12 @@ body {
         Smarajit Karmakar (Hyderabad) <br>
         Anael Lemaitre (Universite Gustave Eiffel) <br>
         Matthieu Leocmach (Lyon) <br>
+				Sylvain Patinet  (ESPCI) <br>
+
 
         </td>
         <td width="281">
 
-        Sylvain Patinet  (ESPCI) <br>
         Itamar Procaccia (Weizmann Institute) <br>
         Camille Scalliet (ENS) <br>
         Peter Schall (Amsterdam) <br>
